Fix horizontal menu being invisible

--- a/grid-items/_grid-layout.scss
+++ b/grid-items/_grid-layout.scss
@@ -48,6 +48,7 @@
     // z-index fix below
 
     #{variables.$select-title-bar},
+    #{variables.$select-title-bar-menu-position-horizontal},
     #main .mainbar::before,
     #{variables.$select-bookmark-bar},
     #{variables.$select-tab-bar},
